<?xml version="1.0" encoding="utf-8"?>
<!--Relative Layout-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313131"
    tools:context="com.example.stephen.movietrails.MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        app:srcCompat="@drawable/inappicon" />

    <Button
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/mainScreenOption1Description"
        android:text="@string/mainScreenOption1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.122" />

    <Button
        android:id="@+id/option2"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/mainScreenOption2Description"
        android:text="@string/mainScreenOption2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.509" />


    <!--<RelativeLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/relativeLayout1">-->
        <!--<EditText-->
            <!--android:layout_marginTop="100dp"-->
            <!--android:textAlignment="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:id="@+id/editText"/>-->
    <!--</RelativeLayout>-->

    <!--<RelativeLayout-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:layout_below="@+id/relativeLayout1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<Button-->
            <!--android:layout_marginStart="70dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/btnAdd"-->
            <!--android:text="Add"/>-->
        <!--<Button-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/btnView"-->
            <!--android:text="View Data"-->
            <!--android:layout_toEndOf="@+id/btnAdd"/>-->

    <!--</RelativeLayout>-->

</android.support.constraint.ConstraintLayout>